# sdgp-project

./: Model.ipynb  README.md  local.properties  model.py  testmodel.py
data_ingress/: urls.py  views.py
leaf_rec-backend/: Procfile  db.sqlite3  pyproject.toml
leaf_rec-backend/api/: settings.py
leaf_rec-backend/data_pipeline/: models.py  serializers.py  urls.py  views.py
leaf_rec-backend/data_pipeline/data_processing/: data_pre.ipynb  data_pre_prep.py  train_model.py
leaf_rec-backend/data_pipeline/migrations/: 0003_processimage_prediction.py
leaf_rec-backend/logs/train/: events.out.tfevents.1680692033.vikums-mbp.24792.0.v2  events.out.tfevents.1680692608.vikums-mbp.24931.0.v2  events.out.tfevents.1680695876.vikums-mbp.27468.0.v2  events.out.tfevents.1680695956.vikums-mbp.27490.0.v2  events.out.tfevents.1680696182.vikums-mbp.27534.0.v2  events.out.tfevents.1680696420.vikums-mbp.27580.0.v2  events.out.tfevents.1680696556.vikums-mbp.27607.0.v2  events.out.tfevents.1680696774.vikums-mbp.27694.0.v2  events.out.tfevents.1680697233.vikums-mbp.27787.6.v2  events.out.tfevents.1680698072.vikums-mbp.28699.0.v2  events.out.tfevents.1680698404.vikums-mbp.28821.0.v2  events.out.tfevents.1680698722.vikums-mbp.28821.2.v2
leaf_rec-backend/logs/validation/: events.out.tfevents.1680691854.vikums-mbp.24714.1.v2  events.out.tfevents.1680691972.vikums-mbp.24758.1.v2  events.out.tfevents.1680692034.vikums-mbp.24792.1.v2  events.out.tfevents.1680693862.vikums-mbp.25006.1.v2  events.out.tfevents.1680695777.vikums-mbp.27430.1.v2  events.out.tfevents.1680695878.vikums-mbp.27468.1.v2  (+11 more)
(+104 files in other folders)
